ingestion/ingestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion
  template:
    metadata:
      name: ingestion-pod
      labels:
        app: ingestion
    spec:
      containers:
        - name: ingestion-container
          image: acrdevproject4480.azurecr.io/axion-ingestion-service:latest
          ports:
            - containerPort: 8000
