ingestion/ingesion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
  namespace: dev
spec:
  selector:
    app: ingestion
  ports:
    - port: 9070
      targetPort: 8000
  type: ClusterIP
