ingestion/ingestion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion-ingress
  namespace: dev
  labels:
    app.kubernetes.io/name: ingestion-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: /health
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: ingestion.hypertrace.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingestion-service
                port:
                  number: 9070
